# adhd-linguistic-patterns-beliefs-portuguese-women

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
appendix/: bertopic_implementation.md  cluster_finetuning.md  clustering_evaluation_methods.md  group_comparisons_evaluation_methods.md  liwc_dimensions.md  liwc_multivariate_methods.md  liwc_univariate_methods.md  preliminary_interview_guide.md  preliminary_interviews.md  questionnaire.md  questionnaire_validation.md
notebooks/: load_adhd_data.ipynb  load_women_adhd_data.ipynb
notebooks/adhd_beliefs_pt/: 01-data_preparation.ipynb  02-data_anonymization.ipynb  02-data_cleaning.ipynb  03-data_anonymization.ipynb  03-data_visualizations.ipynb  04-data_preprocessing.ipynb  04-data_visualizations.ipynb  05-data_preprocessing.ipynb  05-rq1-1_liwc.ipynb  05-rq1_liwc.ipynb  06-rq1-1_binary_analysis.ipynb  06-rq1-1_binary_analysis_2.ipynb  06-rq1-1_binary_analysis_3.ipynb  06-rq1-1_binary_analysis_4.ipynb  06-rq1-1_liwc.ipynb  06-rq1_01_womenadhd_others.ipynb  06-rq1_02_adhd.ipynb  06-rq1_03_women_adhd.ipynb  06-rq1_04_womenmen_adhd.ipynb  06-rq1_05_women_men.ipynb  07-rq1-1_binary_analysis.ipynb  07-rq1-1_group_comparison.ipynb  07-rq1-group_comparison.ipynb  08-generate_embeddings_serafim.ipynb  08-rq1-1_group_comparison.ipynb  09-clustering.ipynb  10-bertopic_gpt.ipynb  10-prepare_clustering.ipynb  10-topic_clusters.ipynb  10-topic_clusters_bertopic.ipynb  10-topic_clusters_bertopic_ollama.ipynb  10-topic_clusters_simple.ipynb  11-bertopic_preprocessing.ipynb  12-bertopic_gpt.ipynb  13-bertopic_model_load.ipynb  14-bertopic_tuning_viz_eval.ipynb  15-bertopic_chosen_viz_eval.ipynb  15-bertopic_other_groups.ipynb  17-topic_evaluation_adhd.ipynb  17-topic_evaluation_women.ipynb  (+4 more)
notebooks/other_datasets/: create_embeddings.ipynb  lda.ipynb  load_adhd_data.ipynb  load_women_adhd_data.ipynb  preprocessing.ipynb  word_cloud.ipynb
src/: bertopic_clusters.py  bertopic_clusters_gpt.py  bertopic_clusters_local.py  bertopic_clusters_reduce.py  bertopic_clusters_tuning.py  main.py
