[project]
name = "adhd-linguistic-patterns-beliefs-portuguese-women"
version = "0.1.0"
description = "Master Thesis for Computer Science and Engineering at Instituto Superior Técnico"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "bokeh>=3.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "tensor>=0.3.6",
    "textblob>=0.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.10",
]

[project.scripts]
adhd-linguistic-patterns-beliefs-portuguese-women = "adhd_linguistic_patterns_beliefs_portuguese_women:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
