[project]
name = "adhd-linguistic-patterns-beliefs-portuguese-women"
version = "0.1.0"
description = "Master Thesis for Computer Science and Engineering at Instituto Superior Técnico"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "bokeh>=3.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "stanza>=1.10.1",
    "tensor>=0.3.6",
    "textblob>=0.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
